--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -92,4 +92,8 @@
     <color name="text_filter_darkgrey">#444443</color>
 
     <color name="black_overlay">#66000000</color>
+
+    <color name="app_primary_color">#4286F5</color>
+    <color name="app_primary_color_dark">#3367D5</color>
+    <color name="app_color_background">#FFF</color>
 </resources>
