--- a/app/src/main/res/layout/activity_table.xml
+++ b/app/src/main/res/layout/activity_table.xml
@@ -29,7 +29,7 @@
             android:gravity="center"
             android:lines="3"
             android:text="姓名"
-            android:textColor="@color/black_font" />
+            android:textColor="@color/text_tite_black" />
 
         <com.example.jzg.androiderp.view.MySyncHorizontalScrollView
             android:id="@+id/rightTitleHorscrollView"
@@ -59,7 +59,7 @@
                     android:gravity="center"
                     android:lines="3"
                     android:text="城市"
-                    android:textColor="@color/black_font" />
+                    android:textColor="@color/text_tite_black" />
 
                 <View
                     android:layout_width="0.5px"
@@ -75,7 +75,7 @@
                     android:focusable="false"
                     android:gravity="center"
                     android:text="领单量"
-                    android:textColor="@color/black_font" />
+                    android:textColor="@color/text_tite_black" />
 
                 <View
                     android:layout_width="0.5px"
@@ -91,7 +91,7 @@
                     android:focusable="false"
                     android:gravity="center"
                     android:text="评估6张"
-                    android:textColor="@color/black_font" />
+                    android:textColor="@color/text_tite_black" />
 
                 <View
                     android:layout_width="0.5px"
@@ -107,7 +107,7 @@
                     android:focusable="false"
                     android:gravity="center"
                     android:text="评估18张"
-                    android:textColor="@color/black_font" />
+                    android:textColor="@color/text_tite_black" />
 
                 <View
                     android:layout_width="0.5px"
@@ -123,8 +123,13 @@
                     android:focusable="false"
                     android:gravity="center"
                     android:text="评估线下"
-                    android:textColor="@color/black_font" />
+                    android:textColor="@color/text_tite_black" />
 
+                <View
+                    android:layout_width="0.5px"
+                    android:layout_height="fill_parent"
+                    android:background="#B8B8B8"
+                    android:visibility="visible" />
                 <TextView
                     android:id="@+id/tv_item6"
                     android:layout_width="100dip"
@@ -133,7 +138,7 @@
                     android:focusable="false"
                     android:gravity="center"
                     android:text="签收单量"
-                    android:textColor="@color/black_font" />
+                    android:textColor="@color/text_tite_black"/>
 
                 <View
                     android:layout_width="0.5px"
@@ -196,9 +201,8 @@
             <com.example.jzg.androiderp.view.MyListView
                 android:id="@+id/contentListViewLeft"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:divider="#000000"
-                android:dividerHeight="0.5dp" />
+                android:layout_height="match_parent"
+              />
             <!-- 右边listview -->
 
             <com.example.jzg.androiderp.view.MySyncHorizontalScrollView
@@ -209,13 +213,24 @@
                 android:background="@android:color/transparent"
                 android:scrollbars="none">
                 <!--名称这一列右边的数据的listView-->
+                <!--<LinearLayout-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:orientation="horizontal"-->
+                    <!--&gt;-->
                 <com.example.jzg.androiderp.view.MyListView
                     android:id="@+id/contentListViewRight"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="5dp"
-                    android:background="@android:color/transparent" />
+                    android:background="@android:color/transparent"
+                    android:cacheColorHint="@android:color/transparent"
+                    android:fadingEdge="none"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:scrollbars="none" />
+
             </com.example.jzg.androiderp.view.MySyncHorizontalScrollView>
         </FrameLayout>
         <!-- </LinearLayout> -->
